home page text, event detail user pic

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -37,14 +37,14 @@
       <div class="container slidero">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="intro-title">Pups Need Pals<span class="element" data-elements="for your puppy"></span></h1>
-            <p class="intro-text"></p>
+            <h1 class="intro-title">Bringing Pups Together<span class="element" data-elements="for your puppy"></span></h1>
+            <p class="intro-text">A meetup for local puppy owners.</p>
             <div class="btn-bar">
-              <a href="/events" class="btn btn-primary btn-lg btn-find">Find a Pup Party</a>
+              <a href="/events" class="btn btn-primary btn-lg btn-find">Find a Pup Meetup</a>
               <%if(user){%>
-                <a href='#' class="btn btn-outline btn-lg" data-toggle="modal" data-target="#myModal">Create a Pup Party</a>
+                <a href='#' class="btn btn-outline btn-lg" data-toggle="modal" data-target="#myModal">Create a Pup Meetup</a>
               <%}else{%>
-                <a href='/user/login' class="btn btn-outline btn-lg">Create a Pup Party</a>
+                <a href='/user/login' class="btn btn-outline btn-lg">Create a Pup Meetup</a>
               <%}%>
             </div>
           </div>
