--- a/server/views/partials/_event_goer.ejs
+++ b/server/views/partials/_event_goer.ejs
@@ -1,7 +1,7 @@
 <div class="owner-card">
   <div class="owner-box">
       <a href="/owner/<%=item.id%>">
-        <img class="owner-avatar" src="<%= item.avatar_url %>" style="width:80px">
+        <img class="owner-avatar" src="<%= item.avatar_url %>" >
         <h5 class="listContent"><%= item.name %></h5>
        </a> 
     </div>
