--- a/server/views/partials/_event_pup.ejs
+++ b/server/views/partials/_event_pup.ejs
@@ -1,6 +1,6 @@
 <span>
   <a class="pup-link" href="/pet/<%=item.id%>">
-    <img class="pup-avatar" src="<%= item.avatar_url %>" style="width:80px" title="<%= item.name %>">
+    <img class="pup-avatar" src="<%= item.avatar_url %>" title="<%= item.name %>">
   </a>
 </span>
 &nbsp;&nbsp;&nbsp;&nbsp;
