--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -279,16 +279,17 @@ section.home-section{
 	text-transform: uppercase;
 	font-size: 60px;
 	text-shadow: rgba(0,0,0,0.498039) 2px 2px 2px;
-	letter-spacing: 0.1	em;
+	letter-spacing: 0.03em;
 	margin: 0px 0px 20px 0px;
 }
 .intro-title span {
 	margin-left: 5px;
 }
 .intro-text {
-	font-size: 16px;
+	font-size: 25px;
 	color: #ffffff;
 	margin-bottom: 30px;
+	font-weight: 200;
 }
 .typed-cursor {
 	opacity: 1;
