--- a/server/views/pet_register.ejs
+++ b/server/views/pet_register.ejs
@@ -33,7 +33,7 @@
               <p>
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-address-book fa" aria-hidden="true"></i></span>
-                  <input class="form-control" type="text" name="avatar_url" placeholder="Avatar URL">
+                  <input class="form-control" type="url" name="avatar_url" placeholder="Avatar URL">
                 </div>
               </p>
               <p>
