pimped out upload photos bar w/ photo preview

--- a/styles/src/puppy_profile.scss
+++ b/styles/src/puppy_profile.scss
@@ -1,4 +1,4 @@
-.pup-info{
+.pup-info {
   border: 1px solid lightgrey;
 }
 
@@ -6,7 +6,7 @@
   padding-top: 20px;
 }
 
-@media (max-width: 320px){
+@media (max-width: 320px) {
   .pup-info {
     position: static;
     height: 500px;
@@ -19,4 +19,31 @@
   margin-top: 40px;
   height: 100px;
   width: 100px;
+}
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid lightgrey;
+  padding: 0.45em;
+}
+
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
+}
+
+#img-upload {
+  width: 50%;
 }
