--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -59,8 +59,17 @@
           <section class="new-status">
             <h2>What has <%= pup.name %> been up to?</h2>
             <form class="status-form" method="POST" action= "/pet/<%= pup.id %>">
-              <input class="form-control" type="file" id="file-input">
-              <textarea class="form-control" name="text" placeholder="Ehhh What's up Doc?"></textarea>
+                  <label>Upload Image</label>
+                  <div class="input-group">
+                      <span class="input-group-btn">
+                          <span class="btn btn-default btn-file">
+                              Browse… <input type="file" id="file-input">
+                          </span>
+                      </span>
+                      <input type="text" class="form-control" readonly>
+                  </div>
+                  <img id='img-upload'/>
+              <textarea class="form-control" name="text" placeholder="New Status"></textarea>
               <br>
               <input class="btn btn-primary" type="submit" value="Update">
               <div class="counter">140</div>
