made a grid of puppy upload, restyled puppy profile

--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -62,8 +62,10 @@
               <input class="form-control" type="file" id="file-input">
               <textarea class="form-control" name="text" placeholder="Ehhh What's up Doc?"></textarea>
               <br>
+              <div class="update-pup">
               <input class="btn btn-primary" type="submit" value="Update">
               <div class="counter">140</div>
+              </div>
             </form>
           </section>
           <% } %>
