made a grid of photos, added hover and styled profile

--- a/styles/src/owner_profile.scss
+++ b/styles/src/owner_profile.scss
@@ -75,8 +75,10 @@
 }
 
 .new-status {
-  padding-top: 0;
+  padding-bottom: 50px; 
+  padding-top: 50px;
 }
+
 
 .owner-profile-col {
   padding: 0 50px;
