code optimization and error handling

--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -40,13 +40,13 @@
                     <p>
                       <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                        <input class="form-control" type="email" name="email" placeholder="Email">
+                        <input required class="form-control" type="email" name="email" placeholder="Email">
                       </div>
                     </p>
                     <p>
                       <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                        <input class="form-control" type="password" name="password" placeholder="Password">
+                        <input required class="form-control" type="password" name="password" placeholder="Password">
                       </div>
                     </p>
                     <button type="submit" class="login btn btn-lg btn-primary btn-block">Login</button>
