--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -39,31 +39,31 @@
                   <p>
                     <div class="input-group">
                       <span class="input-group-addon"><i class="fa fa-address-book fa" aria-hidden="true"></i></span>
-                      <input class="form-control" type="url" name="avatar_url" placeholder="Avatar URL">
+                      <input required class="form-control" type="url" name="avatar_url" placeholder="Avatar URL">
                     </div>
                   </p>
                   <p>
                     <div class="input-group">
                       <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-                      <input class="form-control" type="text" name="username" placeholder="Username">
+                      <input required class="form-control" type="text" name="username" placeholder="Username">
                     </div>
                   </p>
                   <p>
                     <div class="input-group">
                       <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                      <input class="form-control" type="text" name="name" placeholder="Name">
+                      <input required class="form-control" type="text" name="name" placeholder="Name">
                     </div>
                   </p>
                   <p>
                     <div class="input-group">
                       <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                      <input class="form-control" type="email" name="email" placeholder="Email">
+                      <input required class="form-control" type="email" name="email" placeholder="Email">
                     </div>
                   </p>
                   <p>
                     <div class="input-group">
                       <span class="input-group-addon"><i class="fa fa-lock fa" aria-hidden="true"></i></span>
-                      <input class="form-control" type="password" name="password" placeholder="Password">
+                      <input required class="form-control" type="password" name="password" placeholder="Password">
                     </div>
                   </p>
                   <button type="submit" class="signup btn btn-lg btn-primary btn-block">Sign Up</button>
