styling, when on pet-profile, user avatar is small and pet avatar is bigger

--- a/server/views/partials/_puppy.ejs
+++ b/server/views/partials/_puppy.ejs
@@ -1,7 +1,7 @@
 <div class="puppy-card">
   <div class="puppy-box">
     <a href="/pet/<%=pup.id%>">
-    <img class="pup-pic"src="<%= pup.avatar_url %>">
+    <img class="owner-avatar"src="<%= pup.avatar_url %>">
       <h2><%= pup.name %></h2>
     </a>
     <div>
