attending events on calendar styles

--- a/styles/src/event_detail.scss
+++ b/styles/src/event_detail.scss
@@ -104,6 +104,7 @@ a.pup-link {
 }
 
 .rsvped {
-  color: $logo-color;
-  background-color: #AAD7D2;
+  color: #53575e;
+  background-color: #9FE1E7;
+  border: 1px solid #0BBCB2;
 }
