--- a/server/views/partials/_calendar_nav.ejs
+++ b/server/views/partials/_calendar_nav.ejs
@@ -63,7 +63,7 @@
                           <label for="time-input">Time</label>
                           <input class="input form-control" type="time" name="date_time" required="required">
                         </p>
-                        <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+                        <button type="submit" id="btn-create" class="btn btn-lg btn-primary btn-block">Submit</button>
                       </form>
                     </div>
                     <div class="modal-footer">
@@ -79,6 +79,9 @@
       </div>
     </div>
   <script>
+    $('.register-form').on('submit', function() {
+      $('#btn-create').prop('disabled', true)
+    })
     $('.create_event').on('click', (e) => {
       $('#myModal').modal("show");
     });
