--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -19,7 +19,7 @@
           <li><a href="/events"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a></li>
           <% if(!user){%>
             <li><a href='/user/login' class="create_event"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a></li>
-            <li><a href="/user/login">Login</a></li>
+            <li><a href="/user/login">Log In</a></li>
             <li><a href="/user/signup">Sign Up</a></li>
           <%}else{%>
             <li><a href='#' class="create_event"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a></li>
