event detail page improvement
now event creator is highlighted in the attending list

--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -31,6 +31,9 @@
             <div class="seperator"></div>
             <div>
               <% users.forEach((item) => {%>
+                <%if(creator_id === item.id){%>
+                  <p>Event Host</p>
+                <%}%>
                 <% include partials/_event_goer.ejs %>
                 <%if(item.pups.length != 0){%>
                   <p>And their pups</p>
