populate demo event, last style changes

--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -32,7 +32,7 @@
             <div>
               <% users.forEach((item) => {%>
                 <%if(creator_id === item.id){%>
-                  <p>Event Host</p>
+                  <h4>Event Host</h4>
                 <%}%>
                 <% include partials/_event_goer.ejs %>
                 <%if(item.pups.length != 0){%>
