--- a/styles/src/home.scss
+++ b/styles/src/home.scss
@@ -88,3 +88,9 @@ a.error-link {
   background: #bc565d;
   border: 2px solid #bc565d;
 }
+
+.container {
+  width: auto;
+  margin-left: 100px;
+  margin-right: 100px;
+}
