--- a/styles/src/home.scss
+++ b/styles/src/home.scss
@@ -91,6 +91,6 @@ a.error-link {
 
 .container {
   width: auto;
-  margin-left: 100px;
-  margin-right: 100px;
+  padding-left: 10em;
+  padding-right: 10em;
 }
